--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MPL-2.0",
   "author": "larssieboy18 <3jsijawsm@mozmail.com>",
   "dependencies": {
-    "discord.js": "14.7.1"
+    "discord.js": "14.7.1",
+    "dotenv": "16.0.0"
   },
   "homepage": "https://github.com/larssieboy18/UnoOnDiscord",
   "repository": {
