--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "larssieboy18 <3jsijawsm@mozmail.com>",
   "dependencies": {
     "discord.js": "14.7.1",
-    "dotenv": "16.0.0"
+    "dotenv": "16.0.0",
+    "fs-extra": "11.0.0"
   },
   "homepage": "https://github.com/larssieboy18/UnoOnDiscord",
   "repository": {
